--- a/beta/index.html
+++ b/beta/index.html
@@ -12,6 +12,8 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
+                        <li><a href='diff_cachebump.html'>Unified diff core:dev vs beta:origin/cachebump</a></li>
+
                         <li><a href='diff_fix_hvac_modes.html'>Unified diff core:dev vs beta:origin/fix_hvac_modes</a></li>
 
                         <li><a href='diff_improve-reg-clean.html'>Unified diff core:dev vs beta:origin/improve-reg-clean</a></li>
@@ -30,7 +32,7 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
-                        <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
+                        <li><a href='diff_pw_33_2.html'>Unified diff core:dev vs beta:origin/pw_33_2</a></li>
 
                         <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
 
