--- a/beta/diff.html
+++ b/beta/diff.html
@@ -73,7 +73,7 @@
       </svg>      <a href="#d2h-453441" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{ha-core/homeassistant/components → beta/custom_components}/plugwise/climate.py</a>
       <span class="d2h-file-stats">
           <span class="d2h-lines-added">+53</span>
-          <span class="d2h-lines-deleted">-22</span>
+          <span class="d2h-lines-deleted">-23</span>
       </span>
     </span>
 </li>
@@ -6339,7 +6339,47 @@
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -179,6 +199,17 @@</div>
+        <div class="d2h-code-side-line">@@ -175,10 +195,20 @@</div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      175
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn"><br></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      176
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">        await self.coordinator.api.set_schedule_state(</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      177
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">            self.device[&quot;location&quot;],</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-del">
+      178
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">            self.device[&quot;last_used&quot;],</span>
+        </div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
@@ -7727,7 +7767,47 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      199
+      195
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn"><br></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      196
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">        await self.coordinator.api.set_schedule_state(</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      197
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">            self.device[&quot;location&quot;],</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
+      
+    </td>
+    <td class="d2h-cntx d2h-emptyplaceholder">
+        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn"><br></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      198
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -7737,7 +7817,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      200
+      199
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -7747,7 +7827,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      201
+      200
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -7757,7 +7837,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      202
+      201
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -7767,7 +7847,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      203
+      202
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -7777,7 +7857,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      204
+      203
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -7787,7 +7867,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      205
+      204
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -7797,7 +7877,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      206
+      205
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -7807,7 +7887,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      207
+      206
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -7817,7 +7897,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      208
+      207
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -7827,7 +7907,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      209
+      208
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -7837,7 +7917,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      210
+      209
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -7847,7 +7927,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      211
+      210
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -7857,7 +7937,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      212
+      211
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -7867,7 +7947,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      213
+      212
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -7877,7 +7957,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      214
+      213
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -7887,7 +7967,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      215
+      214
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -16910,7 +16990,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.33.<ins>1</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.33.<ins>2</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -16920,7 +17000,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>version</ins>&quot;: &quot;<ins>0</ins>.<ins>42</ins>.<ins>2</ins>&quot;</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>version</ins>&quot;: &quot;<ins>0</ins>.<ins>42</ins>.<ins>3</ins>&quot;</span>
         </div>
     </td>
 </tr><tr>
