Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -14,6 +14,8 @@
 
                         <li><a href='diff_cachebump.html'>Unified diff core:dev vs beta:origin/cachebump</a></li>
 
+                        <li><a href='diff_elga-bug.html'>Unified diff core:dev vs beta:origin/elga-bug</a></li>
+
                         <li><a href='diff_improve_clean.html'>Unified diff core:dev vs beta:origin/improve_clean</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
