--- a/beta/index.html
+++ b/beta/index.html
@@ -14,6 +14,8 @@
 
                         <li><a href='diff_cachebump.html'>Unified diff core:dev vs beta:origin/cachebump</a></li>
 
+                        <li><a href='diff_device-remove.html'>Unified diff core:dev vs beta:origin/device-remove</a></li>
+
                         <li><a href='diff_elga-bug.html'>Unified diff core:dev vs beta:origin/elga-bug</a></li>
 
                         <li><a href='diff_improve_clean.html'>Unified diff core:dev vs beta:origin/improve_clean</a></li>
@@ -27,8 +29,6 @@
                         <li><a href='diff_new_sensor.html'>Unified diff core:dev vs beta:origin/new_sensor</a></li>
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
-
-                        <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
 
                         <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
 
