--- a/beta/index.html
+++ b/beta/index.html
@@ -12,8 +12,6 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
-                        <li><a href='diff_cachebump.html'>Unified diff core:dev vs beta:origin/cachebump</a></li>
-
                         <li><a href='diff_device-remove.html'>Unified diff core:dev vs beta:origin/device-remove</a></li>
 
                         <li><a href='diff_elga-bug.html'>Unified diff core:dev vs beta:origin/elga-bug</a></li>
@@ -24,13 +22,11 @@
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
 
-                        <li><a href='diff_mixin.html'>Unified diff core:dev vs beta:origin/mixin</a></li>
-
                         <li><a href='diff_new_sensor.html'>Unified diff core:dev vs beta:origin/new_sensor</a></li>
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
-                        <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
+                        <li><a href='diff_remove_stale_devices.html'>Unified diff core:dev vs beta:origin/remove_stale_devices</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
