Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -12,6 +12,8 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
+                        <li><a href='diff_handle_lists.html'>Unified diff core:dev vs beta:origin/handle_lists</a></li>
+
                         <li><a href='diff_improve_clean.html'>Unified diff core:dev vs beta:origin/improve_clean</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
@@ -21,8 +23,6 @@
                         <li><a href='diff_new_sensor.html'>Unified diff core:dev vs beta:origin/new_sensor</a></li>
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
-
-                        <li><a href='diff_remove_stale_devices.html'>Unified diff core:dev vs beta:origin/remove_stale_devices</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
