--- a/beta/diff_pre_0_34_11.html
+++ b/beta/diff_pre_0_34_11.html
@@ -168,8 +168,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-867046" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{beta/custom_components → ha-core/homeassistant/components}/plugwise/select.py</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+17</span>
-          <span class="d2h-lines-deleted">-35</span>
+          <span class="d2h-lines-added">+18</span>
+          <span class="d2h-lines-deleted">-36</span>
       </span>
     </span>
 </li>
@@ -26946,13 +26946,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-del d2h-change">
       44
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">        command=lambda api, loc, opt: api.set_schedule_state(loc, opt, STATE_ON),</span>
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">        command=lambda api, loc, opt: api.set_schedule_state(loc, <del>opt</del>, <del>STATE_ON</del>),</span>
         </div>
     </td>
 </tr><tr>
@@ -28120,13 +28120,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
       43
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">        command=lambda api, loc, opt: api.set_schedule_state(loc, opt, STATE_ON),</span>
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">        command=lambda api, loc, opt: api.set_schedule_state(loc, <ins>STATE_ON</ins>, <ins>opt</ins>),</span>
         </div>
     </td>
 </tr><tr>
