Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -22,6 +22,10 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
+                        <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
+
+                        <li><a href='diff_renovate/psf-black-23.x.html'>Unified diff core:dev vs beta:origin/renovate/psf-black-23.x</a></li>
+
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
