Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -18,9 +18,13 @@
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
 
+                        <li><a href='diff_move-typing.html'>Unified diff core:dev vs beta:origin/move-typing</a></li>
+
                         <li><a href='diff_new_sensor.html'>Unified diff core:dev vs beta:origin/new_sensor</a></li>
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
+
+                        <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
