Update: main - Diff report completed

--- a/beta/diff.html
+++ b/beta/diff.html
@@ -5683,7 +5683,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        self.<del>_attr_max_temp</del> = <del>self.device[&quot;thermostat&quot;][&quot;upper_bound&quot;]</del></span>
+            <span class="d2h-code-line-ctn">        self.<del>_attr_max_temp</del> = <del>min(self.device[&quot;thermostat&quot;][&quot;upper_bound&quot;],</del> <del>35.0)</del></span>
         </div>
     </td>
 </tr><tr>
@@ -7792,7 +7792,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        self.<ins>_homekit_enabled</ins> = <ins>homekit_enabled  # pw-beta homekit emulation</ins></span>
+            <span class="d2h-code-line-ctn">        self.<ins>_homekit_enabled</ins> = <ins>homekit_enabled  #</ins> <ins>pw-beta homekit emulation</ins></span>
         </div>
     </td>
 </tr><tr>
