--- a/beta/diff_select_preset.html
+++ b/beta/diff_select_preset.html
@@ -5683,7 +5683,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        self.<del>_homekit_enabled</del> = <del>homekit_enabled  # pw-beta homekit emulation</del></span>
+            <span class="d2h-code-line-ctn">        self.<del>_homekit_enabled</del> = <del>homekit_enabled  #</del> <del>pw-beta homekit emulation</del></span>
         </div>
     </td>
 </tr><tr>
@@ -7792,7 +7792,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        self.<ins>_attr_max_temp</ins> = <ins>self.device[&quot;thermostat&quot;][&quot;upper_bound&quot;]</ins></span>
+            <span class="d2h-code-line-ctn">        self.<ins>_attr_max_temp</ins> = <ins>min(self.device[&quot;thermostat&quot;][&quot;upper_bound&quot;],</ins> <ins>35.0)</ins></span>
         </div>
     </td>
 </tr><tr>
