--- a/beta/index.html
+++ b/beta/index.html
@@ -20,6 +20,8 @@
 
                         <li><a href='diff_new_sensor.html'>Unified diff core:dev vs beta:origin/new_sensor</a></li>
 
+                        <li><a href='diff_pauze.html'>Unified diff core:dev vs beta:origin/pauze</a></li>
+
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
                         <li><a href='diff_pw_0_35_2.html'>Unified diff core:dev vs beta:origin/pw_0_35_2</a></li>
