Update: main - Diff report completed

--- a/beta/diff.html
+++ b/beta/diff.html
@@ -18596,7 +18596,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<del>34</del>.<del>3</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<del>34</del>.3&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -18740,7 +18740,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<ins>35</ins>.<ins>1</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<ins>35</ins>.3&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -18750,7 +18750,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>version</ins>&quot;: &quot;<ins>0</ins>.<ins>45</ins>.<ins>0</ins>&quot;</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>version</ins>&quot;: &quot;<ins>0</ins>.<ins>45</ins>.<ins>1</ins>&quot;</span>
         </div>
     </td>
 </tr><tr>
