--- a/beta/index.html
+++ b/beta/index.html
@@ -12,6 +12,8 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
+                        <li><a href='diff_core-104004.html'>Unified diff core:dev vs beta:origin/core-104004</a></li>
+
                         <li><a href='diff_improve_clean.html'>Unified diff core:dev vs beta:origin/improve_clean</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
@@ -23,8 +25,6 @@
                         <li><a href='diff_pauze.html'>Unified diff core:dev vs beta:origin/pauze</a></li>
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
-
-                        <li><a href='diff_pw_0_35_2.html'>Unified diff core:dev vs beta:origin/pw_0_35_2</a></li>
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
 
