Update: main - Diff report completed

--- a/beta/diff_core-104004.html
+++ b/beta/diff_core-104004.html
@@ -5458,7 +5458,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        self._attr_max_temp = self.device[&quot;thermostat&quot;][&quot;upper_bound&quot;]</span>
+            <span class="d2h-code-line-ctn">        self._attr_max_temp = min(self.device[&quot;thermostat&quot;][&quot;upper_bound&quot;], 35.0)</span>
         </div>
     </td>
 </tr><tr>
