--- a/beta/index.html
+++ b/beta/index.html
@@ -24,6 +24,8 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
+                        <li><a href='diff_pw_35_4.html'>Unified diff core:dev vs beta:origin/pw_35_4</a></li>
+
                         <li><a href='diff_python_312.html'>Unified diff core:dev vs beta:origin/python_312</a></li>
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
