Update: main - Diff report completed

--- a/beta/diff_migrate_max_dhw_temp.html
+++ b/beta/diff_migrate_max_dhw_temp.html
@@ -4979,7 +4979,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">@dataclass</span>
+            <span class="d2h-code-line-ctn">@dataclass(frozen=True)</span>
         </div>
     </td>
 </tr><tr>
@@ -22753,7 +22753,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">@dataclass<ins>(kw_only=True)</ins></span>
+            <span class="d2h-code-line-ctn">@dataclass<ins>(frozen=True, kw_only=True)</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -25396,7 +25396,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>@dataclass(kw_only=True)</ins></span>
+            <span class="d2h-code-line-ctn"><ins>@dataclass(frozen=True, kw_only=True)</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -31124,7 +31124,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">@dataclass</span>
+            <span class="d2h-code-line-ctn">@dataclass(frozen=True)</span>
         </div>
     </td>
 </tr><tr>
@@ -40580,7 +40580,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">@dataclass</span>
+            <span class="d2h-code-line-ctn">@dataclass(frozen=True)</span>
         </div>
     </td>
 </tr><tr>
