--- a/beta/diff_pre_0_34_11.html
+++ b/beta/diff_pre_0_34_11.html
@@ -4709,7 +4709,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">@dataclass</span>
+            <span class="d2h-code-line-ctn">@dataclass(frozen=True)</span>
         </div>
     </td>
 </tr><tr>
@@ -26233,7 +26233,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">@dataclass<ins>(kw_only=True)</ins></span>
+            <span class="d2h-code-line-ctn">@dataclass<ins>(frozen=True, kw_only=True)</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -28866,7 +28866,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">@dataclass<ins>(kw_only=True)</ins></span>
+            <span class="d2h-code-line-ctn">@dataclass<ins>(frozen=True, kw_only=True)</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -34649,7 +34649,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">@dataclass</span>
+            <span class="d2h-code-line-ctn">@dataclass(frozen=True)</span>
         </div>
     </td>
 </tr><tr>
@@ -46180,7 +46180,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">@dataclass</span>
+            <span class="d2h-code-line-ctn">@dataclass(frozen=True)</span>
         </div>
     </td>
 </tr><tr>
