Update: main - Diff report completed

--- a/beta/diff_pauze.html
+++ b/beta/diff_pauze.html
@@ -18626,7 +18626,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;2b&#x2F;4b&#x2F;5749e2f5bcfcf064c839fa8685ae8a361b9e7002eee928047eb544a470b2&#x2F;</del>plugwise<del>-0.36.0a1.tar.gz#plugwise</del>==0.<del>36</del>.<del>0a1</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<del>36</del>.<del>0</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -18636,7 +18636,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>46</del>.<del>0a4</del>&quot;</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>46</del>.<del>0</del>&quot;</span>
         </div>
     </td>
 </tr><tr>
