Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -24,6 +24,8 @@
 
                         <li><a href='diff_remove-device-list.html'>Unified diff core:dev vs beta:origin/remove-device-list</a></li>
 
+                        <li><a href='diff_renovate/igorshubovych-markdownlint-cli-0.x.html'>Unified diff core:dev vs beta:origin/renovate/igorshubovych-markdownlint-cli-0.x</a></li>
+
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
 
                 </ul>
