Update: main - Diff report completed

--- a/beta/diff_add-reload.html
+++ b/beta/diff_add-reload.html
@@ -1185,7 +1185,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        return</span>
+            <span class="d2h-code-line-ctn">        return  # pragma: no cover</span>
         </div>
     </td>
 </tr><tr>
@@ -1545,7 +1545,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        if identifier[0] == DOMAIN and coordinator.data.devices[identifier[1]]</span>
+            <span class="d2h-code-line-ctn">        if identifier[0] == DOMAIN and (identifier[1] in coordinator.data.devices)</span>
         </div>
     </td>
 </tr><tr>
