Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -12,7 +12,7 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
-                        <li><a href='diff_add-reload.html'>Unified diff core:dev vs beta:origin/add-reload</a></li>
+                        <li><a href='diff_add_reload.html'>Unified diff core:dev vs beta:origin/add_reload</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
