Update: main - Diff report completed

--- a/beta/diff.html
+++ b/beta/diff.html
@@ -2349,7 +2349,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    cleanup_device_registry(hass, coordinator.data, entry)</span>
+            <span class="d2h-code-line-ctn">    await cleanup_device_registry(hass, coordinator.data, entry)</span>
         </div>
     </td>
 </tr><tr>
@@ -27986,7 +27986,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">def cleanup_device_registry(</span>
+            <span class="d2h-code-line-ctn">async def cleanup_device_registry(</span>
         </div>
     </td>
 </tr><tr>
