--- a/beta/diff_main.html
+++ b/beta/diff_main.html
@@ -800,7 +800,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    cleanup_device_registry(hass, coordinator.data, entry)</span>
+            <span class="d2h-code-line-ctn">    await cleanup_device_registry(hass, coordinator.data, entry)</span>
         </div>
     </td>
 </tr><tr>
@@ -27002,7 +27002,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">def cleanup_device_registry(</span>
+            <span class="d2h-code-line-ctn">async def cleanup_device_registry(</span>
         </div>
     </td>
 </tr><tr>
